# skill_slidegenie

./: .env.example  .gitignore  README.md  SKILL.md  discussion_slides.json  pyproject.toml
src/slidegenie/: __init__.py  __main__.py  auth.py  cli.py  gemini_client.py  pipeline.py
src/slidegenie/image_gen/: builder.py  flow.py  graphic.py  matrix.py
src/slidegenie/json_gen/: builder.py  postprocess.py
src/slidegenie/prompts/addin/: build_json_only_text.j2  gemini_ocr_all.j2  gemini_ocr_icon.j2  gemini_ocr_icon_and_shape.j2  gemini_ocr_shape.j2  gemini_ocr_text.j2  gemini_ocr_text_and_icon.j2  generate_items.j2  generate_maintask.j2  generate_subtask.j2  make_flowimage_en.j2  make_flowimage_ja.j2  make_graphicimage_en.j2  make_graphicimage_ja.j2  make_matriximage_en.j2  make_matriximage_ja.j2  make_scheduleimage_en.j2  make_scheduleimage_ja.j2  select_maketype.j2
src/slidegenie/prompts/tone-manner/: _tone_and_manner_common_en.j2  _tone_and_manner_common_ja.j2
src/slidegenie/shapes/: object_function.py
src/slidegenie/slide_gen/: builder.py
src/slidegenie/templates/: template.pptx
src/slidegenie/utils/: common.py  constants.py  logger.py
